# keystone

./: .gitignore  CMakeLists.txt  DB_INSTRUCTIONS.md  DB_PLAN.md  LICENSE.txt  NOEDIT.md  README.md  RESTYLING.md  binding.gyp  electron-builder.json  package-lock.json  package.json  tailwind.config.js  test-db.json  test-kyber.js  tsconfig.json  webpack.config.js
addons/: binding.gyp  dilithium_encrypt.cpp  dilithium_node_addon.cpp  kyber_encrypt.cpp  kyber_node_addon.cpp
docs/: ADR.md  dilithium-signature.md  kyber-encryption.md
quantum/: grover_search.py  shor_n15.py
scripts/: copy-native-deps.js  run-dev.bat  setup-pqc-libs.ps1
src/main/: JobSchedulerService.ts  benchmarkManager.ts  dataset-manager.ts  ipc.ts  main.ts  preload.js
src/main/db/: lowdbService.ts
src/main/services/: export-service.ts
src/main/store/: benchmark-store.ts  index.ts
src/main/types/: articles.ts
src/renderer/: App.tsx  App.tsx.backup  global.d.ts  index.html  renderer.ts  renderer.tsx  styles.css
src/renderer/components/: BenchmarkDashboard.tsx  BenchmarkResultCard.tsx  BenchmarkRunner.tsx  DatasetManager.tsx  EncryptionRunner.tsx  Layout.ts  MetricsCard.tsx  QuantumWorkloadRunner.tsx  RecentBenchmarks.tsx  Router.ts  Speedometer.tsx  dashboard.css  index.ts
src/renderer/components/ui/: JobQueueDisplay.tsx  JobSchedulerForm.tsx  LightingSwitchEasterEgg.tsx  PeoEasterEgg.tsx  QuantumLatticeBackground.tsx  StartupAnimation.tsx  card.tsx  eye-toggle.tsx
src/renderer/components/visualizations/: AlgorithmComparisonCard.tsx  AlgorithmComparisonView.tsx  BenchmarkDataTable.tsx  ChartTypeSelector.tsx  CodexTabSelector.tsx  EnhancedCircuitDepthCard.tsx  NoiseAndErrorView.tsx  NoiseErrorDataCard.tsx  PerformanceChart.tsx  QuantumAlgorithmSelector.tsx  QuantumResultsChart.tsx  QuantumRunDetailsDialog.tsx  QuantumRunDetailsTable.tsx  QuantumStatsCard.tsx  StatisticsCard.tsx
src/renderer/context/: QuantumHardwareContext.tsx  SettingsContext.tsx
src/renderer/pages/: CodexPage.tsx  ComparePage.tsx  ExportPage.tsx  HomePage.tsx  ImportPage.tsx  RunBenchmarkPage.tsx  RunEncryptionPage.tsx  RunQuantumWorkloadsPage.tsx  ScheduleJobsPage.tsx  SettingsPage.tsx  VisualizationPage.tsx  index.ts
src/renderer/pages/Compare/: ComparePage.ts
src/renderer/pages/Export/: ExportPage.ts
src/renderer/pages/Home/: HomePage.ts
src/renderer/pages/RunBenchmark/: RunBenchmarkPage.ts
src/renderer/pages/Visualization/: VisualizationPage.ts
src/renderer/styles/: viridis.css
src/renderer/types/: global.d.ts  renderer.d.ts
src/renderer/utils/: algorithm-categories.tsx  algorithm-icons.tsx  benchmark-store-utils.ts  dataProcessingUtils.ts  database-utils.ts  eventUtils.ts  threeInstance.ts
src/renderer/utils/algorithm-icons/: index.d.ts
src/scripts/: package.json  test-noise-metrics.js  verify-noise-fields.js
src/types/: algorithm-types.ts  articles.ts  benchmark.ts  electron.d.ts  jobs.ts  jsx.d.ts  less.d.ts
temp/: BenchmarkRunner.tsx.fixes  EncryptionRunner.tsx.fixes  JobQueueDisplay.tsx  JobSchedulerForm.tsx.fixes  fix-tooltip.ts
tests/: test-kyber-debug.js
